重量入力欄の作成。 完了ボタンのzissou

--- a/TraningDailyApp/Base.lproj/Main.storyboard
+++ b/TraningDailyApp/Base.lproj/Main.storyboard
@@ -535,9 +535,12 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                        <state key="normal" title="次へ">
+                                        <state key="normal" title="決定">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="onEnter:" destination="QiO-O6-Ovx" eventType="touchUpInside" id="554-Q0-B8c"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ii8-Zs-nRM">
                                         <rect key="frame" x="227" y="70" width="72" height="67"/>
