autoinclementでidを付与するように修正

--- a/TraningDailyApp/Base.lproj/Main.storyboard
+++ b/TraningDailyApp/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2BZ-yd-Sgu">
-                                <rect key="frame" x="0.0" y="492" width="414" height="194"/>
+                                <rect key="frame" x="0.0" y="487" width="414" height="199"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
@@ -286,6 +286,7 @@
                     <connections>
                         <outlet property="datePickerField" destination="i64-sD-bpq" id="3Ve-FP-KY9"/>
                         <outlet property="numTextField" destination="4Fv-au-Isw" id="Bd4-0J-eBJ"/>
+                        <outlet property="titleLabel" destination="Lnk-ML-FCB" id="4xg-t3-ByH"/>
                         <outlet property="trainigMenuTextField" destination="gBf-ZE-yiX" id="WdN-CF-dqV"/>
                         <outlet property="weightTextField" destination="VMP-ET-UvS" id="LtX-Xi-hZx"/>
                     </connections>
